--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,14 @@
     <string name="new_todo_add_todo">Zur TODO-Liste hinzufügen</string>
     <string name="global_cancel">Abbrechen</string>
     <string name="new_todo_title_error">Titel erforderlich!</string>
-    <string name="settings_filter_only_checked">Nur nicht fertige TODOs anzeigen</string>
     <string name="tab_todos_empty_todo_list">Kein TODOs vorhanden</string>
     <string name="todo_priotiy_very_low">Sehr niedrig</string>
     <string name="todo_priotiy_low">Niedrig</string>
     <string name="todo_priotiy_default">Normal</string>
     <string name="todo_priotiy_high">Hoch</string>
     <string name="todo_priotiy_very_high">Sehr hoch</string>
+    <string name="todos_enable_filter_label">Filter aktiveren</string>
+    <string name="todos_filter_by_unchecked_label">Nur unfertige TODOs</string>
+    <string name="todos_filter_by_priority_label">Nach Priorität</string>
     <string name="todos_delete_snackbar_text">TODO-Eintrag wurde gelöscht.</string>
 </resources>
