--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="new_todo_priority">Priorität</string>
     <string name="new_todo_add_todo">Zur TODO-Liste hinzufügen</string>
     <string name="new_todo_reset_execution">Zurücksetzen</string>
+    <string name="new_todo_enable_notification">Benachrichtigung aktivieren</string>
     <string name="new_todo_execution_date">Datum:</string>
     <string name="new_todo_execution_date_label">Zeitliche Ausführung</string>
     <string name="global_cancel">Abbrechen</string>
@@ -26,9 +27,10 @@
     <string name="todos_filter_by_unchecked_label">Nur unfertige TODOs</string>
     <string name="todos_date_label">Ausführungsdatum</string>
     <string name="todos_time_label">Ausführungszeit</string>
-    <string name="todos_filter_hint">Filter</string>
-    <string name="todos_filter_by_date">Nach Datum</string>
-    <string name="todos_filter_by_priority">Nach Priorität</string>
+    <string name="todos_sort_hint">Sortieren</string>
+    <string name="todos_sort_by_execution_date">Nach Ausführungsdatum</string>
+    <string name="todos_sort_by_date_created">Nach Erstelldatum</string>
+    <string name="todos_sort_by_priority">Nach Priorität</string>
     <string name="todos_delete_snackbar_text">TODO-Eintrag wurde gelöscht.</string>
     <string name="global_undo">Rückgängig</string>
 </resources>
